tests/paczka1/small_fuzzy/93516900.err
Error in line 2: 3cI007E54H S458 89,0
Error in line 9: j4quB7GD A732 97,57
Error in line 11: DY7oPNxfP A732 96,8
Error in line 6: j4quB7GD A732 56,5
